perf: 对接 SQLBot 优化角色权限